# carbide-node

./: .dockerignore  .env.example  .gitignore  .rustfmt.toml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cargo.toml.simple  DECENTRALIZED_ARCHITECTURE.md  Dockerfile  GUI_COMPLETE.md  IMPLEMENTATION_PLAN.md  INSTALL.md  MACOS_INSTALL_FIX.md  MOBILE_APP_INTEGRATION.md  README_CLEANUP.md  REPLICATION.md  Readme.md  Release-Notes-1.0.0.md  build-gui.sh  carbide-installer.sh  clean.sh  clippy.toml  create-dmg.sh  download-page.html  install.sh  monitor.sh  simple_demo.rs  test-install.sh  test_runner  test_runner.rs
.github/workflows/: ci.yml
contracts/: CarbideEscrow.sol  MockUSDC.sol  foundry.toml
crates/carbide-client/: Cargo.toml
crates/carbide-client/examples/: client_sdk_demo.rs
crates/carbide-client/src/: client.rs  discovery.rs  file_registry.rs  lib.rs  main.rs  payment.rs  registry.rs  storage.rs  wallet.rs
crates/carbide-client/tests/: discovery_integration.rs
crates/carbide-core/: Cargo.toml
crates/carbide-core/examples/: marketplace_demo.rs  networking_demo.rs
crates/carbide-core/src/: crypto.rs  error.rs  lib.rs  network.rs  payment.rs  types.rs
crates/carbide-crypto/: Cargo.toml
crates/carbide-crypto/examples/: crypto_demo.rs
crates/carbide-crypto/src/: content_hash.rs  encryption.rs  lib.rs  proofs.rs  signing.rs  wallet.rs
crates/carbide-discovery/: Cargo.toml
crates/carbide-discovery/examples/: marketplace_demo.rs
crates/carbide-discovery/src/: lib.rs  main.rs
crates/carbide-provider/: Cargo.toml
crates/carbide-provider/abi/: CarbideEscrow.json  CarbideRegistry.json  MockUSDC.json
crates/carbide-provider/examples/: provider_demo.rs
crates/carbide-provider/src/: auth.rs  config.rs  contracts.rs  discovery_client.rs  lib.rs  main.rs  metrics.rs  payment.rs  proof_scheduler.rs  rate_limit.rs  registry.rs  reputation_emitter.rs  server.rs  storage_db.rs  tls.rs
crates/carbide-reputation/: Cargo.toml
crates/carbide-reputation/src/: events.rs  lib.rs  scoring.rs  storage.rs  tracker.rs
demo/: Cargo.toml  Cargo_simple.toml  interactive_demo.rs  main.rs  mod.rs
gui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
gui/src/: App.tsx  styles.css  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  main.rs  provider_manager.rs  system_info.rs
gui/src/components/: Dashboard.tsx  EarningsChart.tsx  InstallWizard.tsx  LogsPanel.tsx  SettingsPanel.tsx  StatusCard.tsx  StorageCard.tsx  SystemMetricsCard.tsx
scripts/: verify_setup.sh
tests/: Cargo.toml  focused_tests.rs  integration_tests.rs  mod.rs  test_utils.rs  unit_tests.rs
