[workspace]
# Define all the crates that are part of this workspace
members = [
    "crates/carbide-core",
    "crates/carbide-provider",
    "crates/carbide-discovery",
    "crates/carbide-client",
    "crates/carbide-reputation",
    "crates/carbide-crypto",
]
# Exclude the Tauri GUI and demo from the workspace
# Demo is a standalone example, not part of the production build
exclude = [
    "gui/src-tauri",
    "demo",
]
# Use the modern resolver for edition 2021
resolver = "2"

# Workspace-level configuration
[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Carbide Network Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/carbide-network"
description = "Decentralized storage marketplace with user-configurable replication"
keywords = ["decentralized", "storage", "marketplace", "p2p", "blockchain"]
categories = ["network-programming", "cryptography", "filesystem"]

# Shared dependencies across all crates - this prevents version conflicts
[workspace.dependencies]
# Core Rust ecosystem
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Networking and web
axum = { version = "0.7", features = ["multipart"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "timeout", "limit"] }

# JWT and auth
jsonwebtoken = "9"
hex = "0.4"

# TLS
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"

# Cryptography  
blake3 = "1.5"
ring = "0.17"
aes-gcm = "0.10"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rocksdb = "0.21"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
dashmap = "5.5"

# Development and testing
criterion = "0.5"
futures = "0.3"
rand = "0.8"
tokio-test = "0.4"

# Optional features for blockchain integration  
ethers = "2.0"

[workspace.metadata]
# Workspace-level metadata for tools
docs.rs.all-features = true

# Development profile optimizations
[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true
split-debuginfo = "unpacked"

# Optimized release builds
[profile.release]
# Maximum optimization for production
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Profile for testing - balance between speed and debug info  
[profile.test]
opt-level = 1
debug = true