[package]
name = "carbide-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cryptographic functions for Carbide Network - content addressing, encryption, proofs"
repository.workspace = true

[dependencies]
# Core dependencies
carbide-core = { path = "../carbide-core" }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# Cryptography
blake3 = { workspace = true }
ring = { workspace = true }
aes-gcm = { workspace = true }
bip39 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }

# Hex encoding
hex = "0.4"

# Serialization (for key pair persistence)
serde_json = { workspace = true }

# Utilities
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
hex = "0.4"
tempfile = "3.8"