[package]
name = "carbide-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Storage provider node - earn money by providing storage capacity"
repository.workspace = true

[[bin]]
name = "carbide-provider"
path = "src/main.rs"

[dependencies]
# Internal dependencies
carbide-core = { path = "../carbide-core" }
carbide-crypto = { path = "../carbide-crypto" }

# Web server and networking
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration and CLI
clap = { workspace = true, features = ["derive"] }
config = { workspace = true }
toml = "0.8"
gethostname = "0.4"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database
rusqlite = { workspace = true }

# Metrics
prometheus = { workspace = true }
lazy_static = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
hex = { workspace = true }
sha2 = "0.10"

# TLS
axum-server = { workspace = true }
rcgen = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"