[package]
name = "carbide-provider-gui"
version = "1.0.0"
description = "Carbide Network Provider Desktop Application"
authors = ["Carbide Network Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/carbide-node"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
carbide-core = { path = "../../crates/carbide-core" }
carbide-provider = { path = "../../crates/carbide-provider" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["api-all", "system-tray"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
toml = "0.8"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is a URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]